basic javascript logic pulling in weather and futures data

--- a/index.html
+++ b/index.html
@@ -10,20 +10,10 @@
 <body>
     <!-- Year and City selection drop-down boxes -->
   <label for="year">Select Year:</label>
-  <select id="year">
-    <option value="2019">2019</option>
-    <option value="2020">2020</option>
-    <option value="2021">2021</option>
-    <!-- Add more options as needed -->
-  </select>
+  <select id="year"></select>
 
   <label for="city">Select City:</label>
-  <select id="city">
-    <option value="New York">New York</option>
-    <option value="London">London</option>
-    <option value="Tokyo">Tokyo</option>
-    <!-- Add more options as needed -->
-  </select>
+  <select id="city"></select>
 
   <!-- Placeholder divs for the charts -->
   <div id="priceChart"></div>
