adding modified HTML/Javascript

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <select id="city"></select>
 
   <!-- Placeholder divs for the charts -->
+  <div id="container"></div>
   <div id="priceChart"></div>
   <div id="temperatureChart"></div>
 
@@ -28,5 +29,7 @@
     <!--these calls are for our javascript (logic) and for Highcharts-->
     <script src="static/logic.js"></script>    
     <script src="https://code.highcharts.com/highcharts.js"></script> 
+    <script src="https://code.highcharts.com/modules/data.js"></script> 
+    <script src="https://code.highcharts.com/modules/accessibility.js"></script> 
 </body>
 </html>
