--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <div id="container"></div>
   <div id="priceChart"></div>
   <div id="temperatureChart"></div>
+  <div id="chart"></div>
+
 
     <!--d3, plotly, leaflet-->
     <script src="https://d3js.org/d3.v5.min.js"></script>
@@ -27,7 +29,10 @@
     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
     crossorigin=""></script>
     <!--these calls are for our javascript (logic) and for Highcharts-->
-    <script src="static/logic.js"></script>    
+    <script src="static/logic.js"></script>
+    <script src="static/logic-ali.js"></script>
+    <script src="static/logic-ed.js"></script>
+    <script src="static/logic-hannah.js"></script>    
     <script src="https://code.highcharts.com/highcharts.js"></script> 
     <script src="https://code.highcharts.com/modules/data.js"></script> 
     <script src="https://code.highcharts.com/modules/accessibility.js"></script> 
