revised import weather code, json code, etc., added logic-ali for js, added html

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <!-- Year and City selection drop-down boxes -->
-  <label for="year">Select Year:</label>
-  <select id="year"></select>
+  <label for="year-dropdown">Select Year:</label>
+  <select id="year-dropdown"></select>
 
-  <label for="city">Select City:</label>
-  <select id="city"></select>
+  <label for="city-dropdown">Select City:</label>
+  <select id="city-dropdown"></select>
 
   <!-- Placeholder divs for the charts -->
   <div id="container"></div>
@@ -29,12 +29,17 @@
     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
     crossorigin=""></script>
     <!--these calls are for our javascript (logic) and for Highcharts-->
-    <script src="static/logic.js"></script>
+    <!--<script src="static/logic.js"></script>-->
     <script src="static/logic-ali.js"></script>
-    <script src="static/logic-ed.js"></script>
-    <script src="static/logic-hannah.js"></script>    
+    <!--<script src="static/logic-ed.js"></script>-->
+    <!--<script src="static/logic-hannah.js"></script>-->    
     <script src="https://code.highcharts.com/highcharts.js"></script> 
+    <script src="http://code.highcharts.com/stock/highcharts-more.js"></script>
     <script src="https://code.highcharts.com/modules/data.js"></script> 
     <script src="https://code.highcharts.com/modules/accessibility.js"></script> 
+    <script src="https://code.highcharts.com/highcharts-more.js"></script>
+    <script src="https://code.highcharts.com/modules/data.js"></script>
+    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+
 </body>
 </html>
