many changes to flask, logic-ali, and html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
       <!-- Include the Plotly.js library -->
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>  
+   <!-- <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -23,12 +23,12 @@
 
 
     <!--d3, plotly, leaflet-->
-    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <!--<script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
     crossorigin=""></script>
-    <!--these calls are for our javascript (logic) and for Highcharts-->
+    <these calls are for our javascript (logic) and for Highcharts-->
     <!--<script src="static/logic.js"></script>-->
     <script src="static/logic-ali.js"></script>
     <!--<script src="static/logic-ed.js"></script>-->
@@ -37,9 +37,6 @@
     <script src="http://code.highcharts.com/stock/highcharts-more.js"></script>
     <script src="https://code.highcharts.com/modules/data.js"></script> 
     <script src="https://code.highcharts.com/modules/accessibility.js"></script> 
-    <script src="https://code.highcharts.com/highcharts-more.js"></script>
-    <script src="https://code.highcharts.com/modules/data.js"></script>
-    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
-
+    
 </body>
 </html>
