updated index and logic-ed

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   <label for="year-dropdown">Select Year:</label>
   <select id="year-dropdown"></select>
 
-  <label for="city-dropdown">Select City:</label>
-  <select id="city-dropdown"></select>
+
 
   <!-- Placeholder divs for the charts -->
   <div class="col-md-5">
@@ -23,6 +22,14 @@
     <div id="ATRchart"></div>
   </div>
 
+  <!--city dropdown-->
+  <label for="city-dropdown">Select City:</label>
+  <select id="city-dropdown"></select>
+
+  <!--temperature chart-->
+  <div class="col-md-5">
+    <div id="temperatureChart"></div>
+  </div>
 
     <!--d3, plotly, leaflet-->
     <script src="https://d3js.org/d3.v5.min.js"></script>
