trying to fix axes and synchronize charts

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 
   <!-- Placeholder divs for the charts -->
-  <div class="col-md-5">
+  <div id="col-md-5">                              <!--was originally <div class="col-md-5">-->
     <div id="priceChart"></div>
   </div>
-  <div class="col-md-5">
+  <div id="col-md-5">                              <!--was originally <div class="col-md-5">-->
     <div id="ATRchart"></div>
   </div>
 
@@ -27,7 +27,7 @@
   <select id="city-dropdown"></select>
 
   <!--temperature chart-->
-  <div class="col-md-5">
+  <div class="col-md-6">
     <div id="temperatureChart"></div>
   </div>
 
