updates to ticks in hannah code

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <!--these calls are for our javascript (logic) and for Highcharts-->
     <!--<script src="static/logic.js"></script>-->
     <!--<script src="static/logic-ali.js"></script>-->
-    <script src="static/logic-ed.js"></script>
-    <!--<script src="static/logic-hannah.js"></script>-->    
+    <!--<script src="static/logic-ed.js"></script>-->  
+    <script src="static/logic-hannah.js"></script>  
     <!--<script src="https://code.highcharts.com/highcharts.js"></script> 
     <script src="http://code.highcharts.com/stock/highcharts-more.js"></script>
     <script src="https://code.highcharts.com/modules/data.js"></script> -->
