--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <!-- <script src="static/logic-hannah.js"></script>   -->
 <!--for candlestick chart-->
 <script src="https://code.highcharts.com/stock/highstock.js"></script>
-<script src="http://code.highcharts.com/stock/highcharts-more.js"></script>
+<script src="https://code.highcharts.com/stock/highcharts-more.js"></script>
 <script src="https://code.highcharts.com/modules/data.js"></script>
 <script src="https://code.highcharts.com/stock/modules/accessibility.js"></script>
 
